Fix row height alignment between Holidays and States grids

--- a/src/app/modules/master-data/components/holidays/components/edit-holiday/edit-holiday.component.scss
+++ b/src/app/modules/master-data/components/holidays/components/edit-holiday/edit-holiday.component.scss
@@ -31,3 +31,9 @@
   align-items: flex-end;  // alinear todos abajo
   gap: 1rem;
 }
+
+.states-table td {
+    padding: 1px 16px !important; 
+    font-size: 14px;
+    margin-left: 15px !important;
+}
